# test-dna

./: Cargo.toml  README.md
dna.workdir/: dna.yaml  happ.yaml
scripts/: pack-happ.bat  pack-happ.sh
sweettest/: Cargo.toml
sweettest/src/: main.rs  setup.rs  test.rs
zome/: Cargo.toml
zome/src/: entries.rs  handle.rs  lib.rs
zome/src/callbacks/: init.rs  mod.rs  post_commit.rs
