[workspace]
resolver = "2"
members = [
  "zome",
  "sweettest",
]

[profile.dev]
lto = false
opt-level = 0
overflow-checks = false

[profile.release.package.testground_sweettest]
opt-level = 0
overflow-checks = false

[profile.release]
opt-level = "z"
lto = true # link time optimization

[profile.release.build-override]
opt-level = "z"

[patch.crates-io]
#holochain = { path = "../../../holochain-develop/crates/holochain" }
#holochain_util = { path = "../../../holochain-develop/crates/holochain_util" }
#holochain_conductor_api = { path = "../../../holochain-develop/crates/holochain_conductor_api" }